--- a/views/default/index.html
+++ b/views/default/index.html
@@ -1,6 +1,7 @@
 {{extend 'layout.html'}}
 
 {{block head}}
+<link href="{{=URL('static','css/stupid.css')}}" rel="stylesheet" type="text/css"/>
 <script src="{{=URL('static', 'js/vue.js')}}"></script>
 <script>
     var my_url = "{{=URL('api', 'my_method')}}";
@@ -8,7 +9,20 @@
 {{end}}
 
 <div class="main_content">
+    
+    {{if auth.user is None:}}
 
+    <div class="welcome_screen">
+      <h2 class="welcome_pt1">Welcome to</h2>
+      <h1 class="welcome_pt2">Mafia Online</h1>
+
+      <div class="welcome_btn_list">
+        <a class="welcome_btn rounded" href="{{=URL('default', 'user', args='login')}}">Log In</a>
+        <a class="welcome_btn rounded" href="{{=URL('default', 'user', args='register')}}">Sign Up</a>
+      </div>
+    </div>
+
+    {{pass}}
     <div id="vue-div" class="display:none">
         <!-- Your code goes here.  Remember to call $("#vue-div").show() once you get the data for the first time. -->
     </div>
