--- a/views/default/user.html
+++ b/views/default/user.html
@@ -1,27 +1,27 @@
 {{extend 'layout.html'}}
+<div class="user_html">
+  <h2 class="user_html_header">
+  {{=T('Sign Up') if request.args(0) == 'register' else T('Log In') if request.args(0) == 'login' else T(request.args(0).replace('_',' ').title())}}
+  </h2>
 
-<h2>
-{{=T('Sign Up') if request.args(0) == 'register' else T('Log In') if request.args(0) == 'login' else T(request.args(0).replace('_',' ').title())}}
-</h2>
-
-<div class="container">
+  <div class="user_html_body container">
     <div class="row">
-        <div id="web2py_user_form" class="col-lg-6">
-        {{
-        if request.args(0)=='login':
-            if not 'register' in auth.settings.actions_disabled:
-                form.add_button(T('Sign Up'),URL(args='register', vars={'_next': request.vars._next} if request.vars._next else None),_class='btn btn-default')
-            pass
-            if not 'request_reset_password' in auth.settings.actions_disabled:
-                form.add_button(T('Lost Password'),URL(args='request_reset_password'),_class='btn btn-default')
-            pass
-        pass
-        =form
-        }}
-        </div>
+      <div id="web2py_user_form" class="col-lg-6">
+      {{
+      if request.args(0)=='login':
+         if not 'register' in auth.settings.actions_disabled:
+           form.add_button(T('Sign Up'),URL(args='register', vars={'_next': request.vars._next} if request.vars._next else None),_class='btn btn-default')
+         pass
+         if not 'request_reset_password' in auth.settings.actions_disabled:
+           form.add_button(T('Lost Password'),URL(args='request_reset_password'),_class='reset_pass_btn')
+         pass
+      pass
+      =form
+      }}
+      </div>
     </div>
+  </div>
 </div>
-
 
 {{block page_js}}
 <script>
