--- a/static/css/myapp.css
+++ b/static/css/myapp.css
@@ -5,8 +5,11 @@
 
 div.main_content{
   height: 100%;
-  background-image: url('../images/welcome_background.jpg');
-  background-size:cover;
+  background: url('../images/welcome_background.jpg') no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
 div.welcome_screen{
@@ -54,8 +57,11 @@ body{
 div.user_html{
   text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
   height: 100%;
-  background-image: url('../images/welcome_background.jpg');
-  background-size:cover;
+  background: url('../images/welcome_background.jpg') no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
 h2.user_html_header{
