--- a/static/css/myapp.css
+++ b/static/css/myapp.css
@@ -54,7 +54,7 @@ body{
   background-image: url(/static/images/welcome_background.jpg);
 }
 
-div.user_html{
+div.user_html_background{
   text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
   height: 100%;
   background: url('../images/welcome_background.jpg') no-repeat center center fixed;
@@ -64,22 +64,20 @@ div.user_html{
   background-size: cover;
 }
 
-h2.user_html_header{
-  text-align: center;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -450%);
-  font-family: Verdana, Geneva, sans-serif;
-}
-
-div.user_html_body{
+div.user_html{
   text-align: center;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+h2.user_html_header{
+  margin-left: 0.2em;
+  font-family: Verdana, Geneva, sans-serif;
+}
+
+
 
 div.user_html_body .control-label{
   font-size: 1.4em;
@@ -103,6 +101,6 @@ div.user_html_body .btn, button {
 div.user_html_body .reset_pass_btn{
   width: 11em;
   position: absolute;
-  right: 0em;
+  left: 0em;
   bottom: -2em;
 }
