made index.html more in the style of vue

--- a/static/css/myapp.css
+++ b/static/css/myapp.css
@@ -105,6 +105,6 @@ div.user_html_body .reset_pass_btn{
   bottom: -2em;
 }
 
-div.lobby_main_content{
+div.main_lobby_content{
     height: 100%;
 }
