--- a/views/layout.html
+++ b/views/layout.html
@@ -29,7 +29,7 @@
       {{include}}
     </main>
     <footer class="black">
-      <div class="container padded max900">
+      <div class="layout_footer container padded max900">
         <div class="fill">
           Copyright @ 2018
         </div>
