--- a/views/default/index.html
+++ b/views/default/index.html
@@ -24,8 +24,24 @@
       </div>
 
       <!-- main lobby when logged in -->
-      <div class="main_lobby_content" v-if="logged_in">
-        <a class="welcome_btn rounded" href="{{=URL('default', 'user', args='logout')}}">Log Out</a>
+      <div class="main_lobby_content container" v-if="logged_in">
+        <div class="main_lobby_games">
+          a
+        </div>
+        <div class="main_lobby_chat">
+          bccccccccccccccccccccccccccccccccccccccc
+        </div>
+        <div class="main_lobby_right_column">
+          <div class="online_users_list">
+              <div v-for="user in users">
+                  ${user.username}
+              </div>
+          </div>
+          <div class="main_lobby_buttons">
+            <a class="logout_btn rounded" href="{{=URL('default', 'user', args='logout')}}">Log Out</a>
+          </div>
+        </div>
+
       </div>
     </div>
 </div>
