--- a/views/default/index.html
+++ b/views/default/index.html
@@ -26,13 +26,14 @@
       <!-- main lobby when logged in -->
       <div class="main_lobby_content container" v-if="logged_in">
         <div class="main_lobby_games">
-          a
+          <p class="game_header">Games</p>
         </div>
         <div class="main_lobby_chat">
-          bccccccccccccccccccccccccccccccccccccccc
+          chat room here
         </div>
         <div class="main_lobby_right_column">
           <div class="online_users_list">
+              <p class="users_list_header">Online Users</p>
               <div v-for="user in users">
                   ${user.username}
               </div>
