--- a/views/default/index.html
+++ b/views/default/index.html
@@ -17,6 +17,7 @@
           <h1 class="welcome_pt2">Mafia Online</h1>
 
           <div class="welcome_btn_list">
+            <a class="welcome_btn rounded" href="{{=URL('default', 'game')}}">Booze</a>
             <a class="welcome_btn rounded" href="{{=URL('default', 'user', args='login')}}">Log In</a>
             <a class="welcome_btn rounded" href="{{=URL('default', 'user', args='register')}}">Sign Up</a>
           </div>
