--- a/views/default/index.html
+++ b/views/default/index.html
@@ -5,6 +5,7 @@
 <script src="{{=URL('static', 'js/vue.js')}}"></script>
 <script>
     var users_url = "{{=URL('api', 'get_users')}}";
+    var update_users_url = "{{=URL('api', 'update_users')}}";
     var send_msg_url = "{{=URL('api', 'send_msg')}}";
     var get_new_msgs_url = "{{=URL('api', 'get_new_msgs')}}";
 </script>
