--- a/static/css/myapp.css
+++ b/static/css/myapp.css
@@ -184,7 +184,6 @@ div.game_left_column {
 div.game_timer {
     height: 5%;
     width: 70%;
-
     margin:0 auto;
     border: 1px solid #000;
     text-align: center;
@@ -194,6 +193,8 @@ div.game_chat {
     height: 73%;
     margin-top: 1%;
     border: 1px solid #000;
+    padding: 5px 10px;
+    overflow: auto;
 }
 
 div.players_list {
@@ -207,13 +208,21 @@ div.players_list {
     font-size: 20px;
 }
 
-div.msg_list {
+.msg_list_container {
+    display: table;
     height: 90%;
+    padding-bottom: 10px;
     float: top;
     overflow: auto;
+}
+
+.msg_list {
+    display: table-cell;
+    vertical-align: bottom;
 }
 
 div.msg_input {
     float: bottom;
     border: 1px solid #000;
+    padding-right: 10px;
 }
