--- a/views/default/game.html
+++ b/views/default/game.html
@@ -4,7 +4,9 @@
 <script src="{{=URL('static', 'js/vue.js')}}"></script>
 <script>
     var my_url = "{{=URL('api', 'my_method')}}";
-    var get_ingame_players_url = "{{=URL('api', 'get_ingame_players')}}"
+    var get_ingame_players_url = "{{=URL('api', 'get_ingame_players')}}";
+    var send_msg_url = "{{=URL('api', 'send_msg')}}";
+    var get_new_msgs_url = "{{=URL('api', 'get_new_msgs')}}";
 </script>
 {{end}}
 
