Fixed game creation error

--- a/views/default/index.html
+++ b/views/default/index.html
@@ -59,7 +59,7 @@
 
       </div>
 	  <div class="creation_form" v-if="creating_game"> 
-		<p class="game_id"> Game ID: </p>
+		<p class="game_id"> Game name: </p>
 		<input id="make_game" v-model="new_game"/>
 		<button v-on:click="create_game">Submit</button>
 		<button v-on:click="cancel_create">Cancel</button> 
