--- a/views/default/game.html
+++ b/views/default/game.html
@@ -20,7 +20,7 @@
           <div class="game_left_column">
               <div class="game_timer">
                   <div v-if="!has_game_ended">
-                      ${phase} ${turn}, ${timer_minutes} Minutes ${timer_seconds} Seconds Remaining
+                      ${phases[phase_count]} ${turn}, ${timer_minutes} Minutes ${timer_seconds} Seconds Remaining
                   </div>
                   <div v-if="has_game_ended">
                       Game Over
