--- a/views/default/game.html
+++ b/views/default/game.html
@@ -6,6 +6,7 @@
     var my_url = "{{=URL('api', 'my_method')}}";
     var get_ingame_players_url = "{{=URL('api', 'get_ingame_players')}}";
     var send_msg_url = "{{=URL('api', 'send_msg')}}";
+    var cast_vote_url = "{{=URL('api', 'cast_vote')}}";
     var swap_players_url = "{{=URL('api', 'swap_player_roles')}}";
     var get_new_msgs_url = "{{=URL('api', 'get_new_msgs')}}";
     var user_id = "{{=auth.user.id}}";
@@ -52,7 +53,11 @@
 
               ${test}
               <button v-on:click="test++"></button>
+                <div>
+                    <pre>${player_log}</pre>
+            </div>
           </div>
+
         </div>
     </div>
 
