--- a/views/default/index.html
+++ b/views/default/index.html
@@ -9,6 +9,7 @@
     var get_new_msgs_url = "{{=URL('api', 'get_new_msgs')}}";
 	var add_game_url = "{{=URL('api', 'add_game')}}"; 
 	var get_games_url = "{{=URL('api', 'get_games')}}";
+	var update_player_info_url = "{{=URL('api', 'update_player_info')}}";
 </script>
 {{end}}
 
