--- a/static/css/myapp.css
+++ b/static/css/myapp.css
@@ -145,7 +145,7 @@ div.main_lobby_content div.main_lobby_right_column{
 }
 
 div.main_lobby_content div.main_lobby_right_column div.online_users_list{
-    height: 85%;
+    height: 82%;
     border: 1px solid #000;
     overflow: auto;
     padding: 5px 15px;
@@ -167,7 +167,7 @@ div.main_lobby_content div.main_lobby_right_column div.main_lobby_buttons{
 .logout_btn, button {
   text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
   width: 10em;
-  padding:7px 70px 10px 70px;
+  text-align: center;
   margin:0 0.5em 0.5em 0.5em;
   display:inline-block;
   background-color:firebrick;
@@ -237,7 +237,7 @@ div.players_list {
 div.msg_input {
     float: bottom;
     border: 1px solid #000;
-    padding-right: 10px;
+
 }
 
 .game_lobby_screen {
