Added code for leader to assign roles

--- a/views/default/game.html
+++ b/views/default/game.html
@@ -8,7 +8,11 @@
     var send_msg_url = "{{=URL('api', 'send_msg')}}";
     var cast_vote_url = "{{=URL('api', 'cast_vote')}}";
     var swap_players_url = "{{=URL('api', 'swap_player_roles')}}";
+    var update_roles_url = "{{=URL('api', 'update_roles')}}";
     var get_new_msgs_url = "{{=URL('api', 'get_new_msgs')}}";
+    {{if auth.user is not None:}}
+        var user_id = "{{=auth.user.id}}";
+    {{pass}}
 </script>
 {{end}}
 
@@ -47,6 +51,9 @@
                       </tr>
                   </tbody>
               </table>
+              <div>
+                 <pre>${player_log}</pre>
+             </div>
           </div>
 
         </div>
